src/styles.css
* {
  box-sizing: border-box;
}

.App {
  font-family: sans-serif;
  text-align: center;
  height: 100vh;
}

body {
  background-color: black;
  margin: 0;
}

.home {
  position: relative;
  display: inline-block;
}

.header-nav {
  position: relative;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 60%;
  margin: auto;
  color: #aaaaaa;
  background-color: #00050d;
  height: 15%;
}

.profile-image {
  background-image: url(https://m.media-amazon.com/images/G/02/CerberusPrimeVideo-FN38FSBD/adult-1.png);
  padding: 14px;
  border-radius: 50rem;
  background-size: contain;
  background-repeat: no-repeat;
}

.home-options {
  display: flex;
  flex-direction: column;
  column-gap: 1rem;
  justify-content: space-between;
  align-items: flex-start;
  width: 5rem;
  position: absolute;
  background-color: #60626968;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.back {
  background-color: #60626968;
}

/* .back {
  background-color: #60626968;
  border-radius: 4px;
  border: 2px solid black;
  border-top: none;
  padding: 0 4px;
  height: 20vh;
  width: 5rem;
} */
/* .home:hover,
.home:active {
  background-color: #60626968;
} */
.categories-list {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 2rem;
  width: 60rem;
  height: 30rem;
  background-color: #60626968;
  padding: 8px;
  width: 60%;
  height: fit-content;
  margin: auto;
  color: #aaaaaa;
}

.categories-list ul {
  list-style: none;
}

.categories-list_heading {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  height: 50vh;
}
.main-images {
  height: 60%;
  background: linear-gradient(
    90deg,
    rgba(0, 5, 13, 0.8) 19.65%,
    rgba(0, 5, 13, 0) 49.93%
  );
  position: relative;
}
.main-images ul {
  display: flex;
  flex-wrap: nowrap;
  list-style: none;
  height: 100%;
  width: 100%;
  padding: 0;
  animation: video-slide-left 12s ease-in-out forwards;
  animation-delay: 2s;
}

.main-images ul:hover {
  animation-play-state: paused;
}

/* .main-images ul:hover {
  transform: translateX(-100%);
  transition: transform 2s ease-in-out;
} */

.main-images li {
  height: 100%;
  width: 100%;
  border-radius: 6px;
}

/* .video-adjustment {
  position: absolute;
  z-index: 2;
  height: 80%;
  width: fit-content;
  right: 20px;
  overflow: hidden;
} */

.main-images li video {
  position: absolute;
  z-index: 2;
  height: 80%;
  width: fit-content;
  right: 3rem;
  border-radius: 6px;
  object-fit: contain;
}

@media only screen and (min-width: 1300px) {
  article {
    background-image: linear-gradient(
      90deg,
      #00050d 70%,
      rgba(0, 5, 13, 0) 10.19%
    );
  }
}

/* .main-images li:hover {
  animation-play-state: paused;
} */

.main-images div {
  width: 100%;
  height: 100%;
  position: relative;
  background: linear-gradient(
    90deg,
    rgba(0, 5, 13, 0.8) 19.65%,
    rgba(0, 5, 13, 0) 49.93%
  );
  border-radius: 6px;
}
.main-images img {
  width: 100vw;
  height: 80%;
  object-fit: contain;
  border-radius: 6px;
}

.main-images-title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  height: 100%;
  width: 30%;
  position: absolute;
  z-index: 4;
  top: 0.9rem;
  left: 3rem;
  color: white;
  font-weight: bold;
  padding: 1rem;
  /* background: linear-gradient(
    90deg,
    rgba(0, 5, 13, 0.8) 30.65%,
    rgba(0, 5, 13, 0) 49.93%
  ); */
  margin-left: 2rem;
}

.main-images-title img {
  height: 70%;
  width: 100%;
  object-fit: contain;
}

.main-controls {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  column-gap: 1rem;
  height: 4rem;
}

.continue-container {
  position: relative;
  align-items: center;
  z-index: 2;
  display: flex;
  height: 190px;
  gap: 0.8rem;
  overflow-x: auto;
}

/* .continue-container::-webkit-scrollbar {
  display: none;
} */

.continue-container picture {
  border-radius: 4px;
}

.continue-container img {
  border-radius: 4px;
  width: 260px;
  transition: transform 0.2s;
}

.continue-container img:hover {
  transform: scale(1.5);
}

/* @media only screen and (min-width: 1000px) {
  .main-images-title {
    width: 20%;
  }
} */

/* @media only screen and (min-width: 1250px) {
  .main-images-title {
    width: 30%;
  }
} */

@keyframes video-slide-left {
  0% {
    transform: translateX(0);
    /* transition: transform 2s ease-in-out; */
  }
  16.6%,
  33.26% {
    transform: translateX(-100%);
  }
  49.8%,
  66.4% {
    transform: translateX(-200%);
  }
  83.6%,
  100% {
    transform: translateX(-300%);
  }
}

.blurimage {
  opacity: 0.3;
}

.pauseanimation {
  -webkit-animation-play-state: paused;
  -moz-animation-play-state: paused;
  -o-animation-play-state: paused;
  animation-play-state: paused;
  cursor: pointer;
}

/* .playanimation {
  animation: video-slide-left 12s ease-in-out forwards;
} */

/* animation-play-state: running;
} */

article {
  position: absolute;
  z-index: 3;
  height: 80%;
  width: 100%;
  right: 20px;
  /* background-image: linear-gradient(
    to right,
    #00050d 20%,
    rgba(0, 5, 13, 0) 80%
  ); */
  background-image: linear-gradient(
    90deg,
    #00050d 40%,
    rgba(0, 5, 13, 0) 50.19%
  );
}

.main-controls i {
  height: 3rem;
  width: 3rem;
  padding: 16px;
  color: black;
  background: white;
  border-radius: 1000px;
}

.fa-plus,
.fa-circle-info {
  padding: 12px !important;
  height: 2.5rem !important;
  width: 2.5rem !important;
  color: white !important;
  background-color: hsla(0, 0%, 100%, 0.2) !important;
}

